--- a/数据恢复.ipynb
+++ b/数据恢复.ipynb
@@ -166,81 +166,6 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-24T05:22:41.321278Z",
-     "start_time": "2025-10-24T05:22:37.033273Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "import os, json, glob, time, subprocess, shlex, pathlib\n",
-    "\n",
-    "\n",
-    "ACCESS = \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzYxMjg0OTE1LCJpYXQiOjE3NjEyODMxMTUsImp0aSI6ImNiZGFlNmMyMmE2ODRkMTBhYjc2ZmY3NGJkNTE0N2Q4IiwidXNlcl9pZCI6IjEifQ.kiG38RSaWVVF_FrnYKHB-Ce_3AvzfVMWJLlPMytBegc\"  # 或用 %env 先设\n",
-    "URL = \"http://47.111.136.177/AppleStockChecker/purchasing-price-records/import-tradein-xlsx/?dry_run=0\"\n",
-    "\n",
-    "ROOT = \"localdata/\"\n",
-    "# 递归找 excel\n",
-    "# patterns = [\"**/*.xlsx\",\"**/*.xls\",\"**/*.xlsm\",\"**/*.xlsb\"]\n",
-    "patterns = [\"**/*.csv\"]\n",
-    "files = []\n",
-    "for pat in patterns:\n",
-    "    files += glob.glob(os.path.join(ROOT, pat), recursive=True)\n",
-    "# 过滤 ~$.xlsx 临时文件并排序\n",
-    "files = sorted(f for f in files if not pathlib.Path(f).name.startswith(\"~$\"))\n",
-    "\n",
-    "print(f\"Found {len(files)} excel files\")\n",
-    "\n",
-    "def post_one(path, retries=2, backoff=2.0):\n",
-    "    cmd = [\n",
-    "        \"curl\",\"-sS\",\"-i\",\"-X\",\"POST\", URL,\n",
-    "        \"-H\", f\"Authorization: Bearer {ACCESS}\",\n",
-    "        \"-F\", f\"files=@{path}\",\n",
-    "    ]\n",
-    "    for attempt in range(retries+1):\n",
-    "        try:\n",
-    "            out = subprocess.check_output(cmd, stderr=subprocess.STDOUT).decode(\"utf-8\", \"replace\")\n",
-    "            # 可选：简单取 HTTP 状态行\n",
-    "            status_line = out.splitlines()[0] if out else \"\"\n",
-    "            return status_line, out\n",
-    "        except subprocess.CalledProcessError as e:\n",
-    "            if attempt >= retries:\n",
-    "                return f\"ERROR after {retries} retries\", e.output.decode(\"utf-8\", \"replace\")\n",
-    "            time.sleep(backoff * (attempt+1))\n",
-    "\n",
-    "for i, f in enumerate(files, 1):\n",
-    "    status, resp = post_one(f)\n",
-    "    print(f\"[{i}/{len(files)}] {f}\\n{status}\\n\")\n",
-    "    time.sleep(20)"
-   ],
-   "id": "c442692effcdc8c7",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 1 excel files\n",
-      "[1/1] localdata/shop11.csv\n",
-      "HTTP/1.1 202 Accepted\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[5], line 39\u001B[0m\n\u001B[1;32m     37\u001B[0m status, resp \u001B[38;5;241m=\u001B[39m post_one(f)\n\u001B[1;32m     38\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m[\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mi\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m/\u001B[39m\u001B[38;5;132;01m{\u001B[39;00m\u001B[38;5;28mlen\u001B[39m(files)\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m] \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mf\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;132;01m{\u001B[39;00mstatus\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m---> 39\u001B[0m \u001B[43mtime\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msleep\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m200\u001B[39;49m\u001B[43m)\u001B[49m\n",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
-     ]
-    }
-   ],
-   "execution_count": 5
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
      "end_time": "2025-10-24T05:39:19.893234Z",
      "start_time": "2025-10-24T05:39:19.835235Z"
     }
@@ -277,8 +202,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-24T06:15:57.002137Z",
-     "start_time": "2025-10-24T06:15:56.230447Z"
+     "end_time": "2025-10-24T07:06:47.140037Z",
+     "start_time": "2025-10-24T07:06:46.275390Z"
     }
    },
    "cell_type": "code",
@@ -306,7 +231,7 @@
     "                  \"AppleWebKit/537.36 (KHTML, like Gecko) Chrome/117.0 Safari/537.36\"\n",
     "}\n",
     "\n",
-    "OUTPUT_CSV = \"localdata/pastec_prices.csv\"\n",
+    "OUTPUT_CSV = \"localdata/shop11.csv\"\n",
     "\n",
     "def clean_text(s):\n",
     "    if s is None:\n",
@@ -453,11 +378,75 @@
      "text": [
       "Fetching: https://pastec.net/iphone\n",
       "Found 119 records on https://pastec.net/iphone\n",
-      "Saved 119 rows -> localdata/pastec_prices.csv\n"
+      "Saved 119 rows -> localdata/shop11.csv\n"
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-24T07:07:09.829311Z",
+     "start_time": "2025-10-24T07:06:49.625352Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import os, json, glob, time, subprocess, shlex, pathlib\n",
+    "\n",
+    "\n",
+    "ACCESS = \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzYxMjkwOTc4LCJpYXQiOjE3NjEyODkxNzgsImp0aSI6ImNhNTIwZDQ2MzZjMzRlZWQ4NmM0NTQ1NGE0NmM1Zjk2IiwidXNlcl9pZCI6IjEifQ.675hP1yE4C4w2ZlgvP1GJjvt2YhshgR40eJqRUf3IhM\"  # 或用 %env 先设\n",
+    "URL = \"http://47.111.136.177/AppleStockChecker/purchasing-price-records/import-tradein-xlsx/?dry_run=0\"\n",
+    "\n",
+    "ROOT = \"localdata/\"\n",
+    "# 递归找 excel\n",
+    "# patterns = [\"**/*.xlsx\",\"**/*.xls\",\"**/*.xlsm\",\"**/*.xlsb\"]\n",
+    "patterns = [\"**/*.csv\"]\n",
+    "files = []\n",
+    "for pat in patterns:\n",
+    "    files += glob.glob(os.path.join(ROOT, pat), recursive=True)\n",
+    "# 过滤 ~$.xlsx 临时文件并排序\n",
+    "files = sorted(f for f in files if not pathlib.Path(f).name.startswith(\"~$\"))\n",
+    "\n",
+    "print(f\"Found {len(files)} excel files\")\n",
+    "\n",
+    "def post_one(path, retries=2, backoff=2.0):\n",
+    "    cmd = [\n",
+    "        \"curl\",\"-sS\",\"-i\",\"-X\",\"POST\", URL,\n",
+    "        \"-H\", f\"Authorization: Bearer {ACCESS}\",\n",
+    "        \"-F\", f\"files=@{path}\",\n",
+    "    ]\n",
+    "    for attempt in range(retries+1):\n",
+    "        try:\n",
+    "            out = subprocess.check_output(cmd, stderr=subprocess.STDOUT).decode(\"utf-8\", \"replace\")\n",
+    "            # 可选：简单取 HTTP 状态行\n",
+    "            status_line = out.splitlines()[0] if out else \"\"\n",
+    "            return status_line, out\n",
+    "        except subprocess.CalledProcessError as e:\n",
+    "            if attempt >= retries:\n",
+    "                return f\"ERROR after {retries} retries\", e.output.decode(\"utf-8\", \"replace\")\n",
+    "            time.sleep(backoff * (attempt+1))\n",
+    "\n",
+    "for i, f in enumerate(files, 1):\n",
+    "    status, resp = post_one(f)\n",
+    "    print(f\"[{i}/{len(files)}] {f}\\n{status}\\n\")\n",
+    "    time.sleep(20)"
+   ],
+   "id": "6c96842d16dc53c9",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 1 excel files\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 13
   },
   {
    "metadata": {},
