--- a/数据恢复.ipynb
+++ b/数据恢复.ipynb
@@ -201,9 +201,11 @@
   },
   {
    "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
     "ExecuteTime": {
-     "end_time": "2025-10-24T07:06:47.140037Z",
-     "start_time": "2025-10-24T07:06:46.275390Z"
+     "start_time": "2025-10-24T07:30:56.341995Z"
     }
    },
    "cell_type": "code",
@@ -221,6 +223,9 @@
     "from bs4 import BeautifulSoup\n",
     "import requests\n",
     "import pandas as pd\n",
+    "import os, json, glob, time, subprocess, shlex, pathlib\n",
+    "\n",
+    "\n",
     "import re\n",
     "\n",
     "# URL 列表（可以改成你要抓取的页面）\n",
@@ -367,36 +372,8 @@
     "        df.to_csv(OUTPUT_CSV, index=False, encoding=\"utf-8-sig\")\n",
     "        print(f\"Saved {len(df)} rows -> {OUTPUT_CSV}\")\n",
     "\n",
-    "if __name__ == \"__main__\":\n",
-    "    main()\n"
-   ],
-   "id": "ce1e3ac3d8a39c9d",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching: https://pastec.net/iphone\n",
-      "Found 119 records on https://pastec.net/iphone\n",
-      "Saved 119 rows -> localdata/shop11.csv\n"
-     ]
-    }
-   ],
-   "execution_count": 12
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-10-24T07:07:09.829311Z",
-     "start_time": "2025-10-24T07:06:49.625352Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "import os, json, glob, time, subprocess, shlex, pathlib\n",
     "\n",
-    "\n",
-    "ACCESS = \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzYxMjkwOTc4LCJpYXQiOjE3NjEyODkxNzgsImp0aSI6ImNhNTIwZDQ2MzZjMzRlZWQ4NmM0NTQ1NGE0NmM1Zjk2IiwidXNlcl9pZCI6IjEifQ.675hP1yE4C4w2ZlgvP1GJjvt2YhshgR40eJqRUf3IhM\"  # 或用 %env 先设\n",
+    "ACCESS = \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzYxMjkyODM5LCJpYXQiOjE3NjEyOTEwMzksImp0aSI6IjI1YzA4YjY5OTFhNjQ4NTU5MDM3MzkyZDlkMTFhZDNkIiwidXNlcl9pZCI6IjEifQ.vGizfpUd9O-pEfXCQz69e1hOdGKMCPfMN3MLh6IgjAU\"  # 或用 %env 先设\n",
     "URL = \"http://47.111.136.177/AppleStockChecker/purchasing-price-records/import-tradein-xlsx/?dry_run=0\"\n",
     "\n",
     "ROOT = \"localdata/\"\n",
@@ -428,10 +405,50 @@
     "                return f\"ERROR after {retries} retries\", e.output.decode(\"utf-8\", \"replace\")\n",
     "            time.sleep(backoff * (attempt+1))\n",
     "\n",
-    "for i, f in enumerate(files, 1):\n",
-    "    status, resp = post_one(f)\n",
-    "    print(f\"[{i}/{len(files)}] {f}\\n{status}\\n\")\n",
-    "    time.sleep(20)"
+    "for i in range(1000):\n",
+    "    main()\n",
+    "\n",
+    "    for i, f in enumerate(files, 1):\n",
+    "        status, resp = post_one(f)\n",
+    "        print(f\"[{i}/{len(files)}] {f}\\n{status}\\n\")\n",
+    "        time.sleep(20)\n",
+    "    print(f\"Finished {i}\")\n",
+    "\n",
+    "    time.sleep(10*60)\n",
+    "\n",
+    "\n"
+   ],
+   "id": "ce1e3ac3d8a39c9d",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 1 excel files\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n"
+     ]
+    }
+   ],
+   "execution_count": null
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-24T07:25:55.850881Z",
+     "start_time": "2025-10-24T07:25:35.587608Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "\n",
+    "\n",
+    "\n"
    ],
    "id": "6c96842d16dc53c9",
    "outputs": [
@@ -446,7 +463,7 @@
      ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 15
   },
   {
    "metadata": {},
