--- a/数据恢复.ipynb
+++ b/数据恢复.ipynb
@@ -201,9 +201,11 @@
   },
   {
    "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
     "ExecuteTime": {
-     "end_time": "2025-10-24T08:08:55.320807Z",
-     "start_time": "2025-10-24T07:51:03.471412Z"
+     "start_time": "2025-10-24T08:25:48.012579Z"
     }
    },
    "cell_type": "code",
@@ -371,7 +373,7 @@
     "        print(f\"Saved {len(df)} rows -> {OUTPUT_CSV}\")\n",
     "\n",
     "\n",
-    "ACCESS = \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzYxMjk0MDQ4LCJpYXQiOjE3NjEyOTIyNDgsImp0aSI6IjBmYTVmOTkyMWI4OTRiODdhNzA0MjhjNjlkNWM3YzMyIiwidXNlcl9pZCI6IjEifQ.5gtpM4H482XvBHJ9uyP8oAgSvaYcpb_qFwPmy7wh_Uk\"  # 或用 %env 先设\n",
+    "ACCESS = \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzYxMjk2MTMxLCJpYXQiOjE3NjEyOTQzMzEsImp0aSI6ImE1M2VkNzY3ZjE2YTRlOWFhZjc2OGM0N2Y5YWRlOGE1IiwidXNlcl9pZCI6IjEifQ.m7rvGUWQB1JLzCMrLBZm5PHwwcaC3lWENjwXo6jkJtc\"  # 或用 %env 先设\n",
     "URL = \"http://47.111.136.177/AppleStockChecker/purchasing-price-records/import-tradein-xlsx/?dry_run=0\"\n",
     "\n",
     "ROOT = \"localdata/\"\n",
@@ -428,30 +430,11 @@
       "Saved 119 rows -> localdata/shop11.csv\n",
       "[1/1] localdata/shop11.csv\n",
       "HTTP/1.1 202 Accepted\n",
-      "\n",
-      "Finished 1\n",
-      "Fetching: https://pastec.net/iphone\n",
-      "Found 119 records on https://pastec.net/iphone\n",
-      "Saved 119 rows -> localdata/shop11.csv\n",
-      "[1/1] localdata/shop11.csv\n",
-      "HTTP/1.1 202 Accepted\n",
-      "\n",
-      "Finished 1\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[20], line 205\u001B[0m\n\u001B[1;32m    202\u001B[0m     time\u001B[38;5;241m.\u001B[39msleep(\u001B[38;5;241m20\u001B[39m)\n\u001B[1;32m    203\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mFinished \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mi\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m--> 205\u001B[0m \u001B[43mtime\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msleep\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m10\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m60\u001B[39;49m\u001B[43m)\u001B[49m\n",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
+      "\n"
      ]
     }
    ],
-   "execution_count": 20
+   "execution_count": null
   },
   {
    "metadata": {},
