--- a/数据恢复.ipynb
+++ b/数据恢复.ipynb
@@ -205,7 +205,7 @@
      "is_executing": true
     },
     "ExecuteTime": {
-     "start_time": "2025-10-24T08:25:48.012579Z"
+     "start_time": "2025-10-24T08:38:02.965945Z"
     }
    },
    "cell_type": "code",
@@ -373,7 +373,7 @@
     "        print(f\"Saved {len(df)} rows -> {OUTPUT_CSV}\")\n",
     "\n",
     "\n",
-    "ACCESS = \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzYxMjk2MTMxLCJpYXQiOjE3NjEyOTQzMzEsImp0aSI6ImE1M2VkNzY3ZjE2YTRlOWFhZjc2OGM0N2Y5YWRlOGE1IiwidXNlcl9pZCI6IjEifQ.m7rvGUWQB1JLzCMrLBZm5PHwwcaC3lWENjwXo6jkJtc\"  # 或用 %env 先设\n",
+    "ACCESS = \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzYxMjk2ODcyLCJpYXQiOjE3NjEyOTUwNzIsImp0aSI6IjM4MWRlNDg0MjEwZDQ2ZDg4N2U0MzcyNjAxNmY4Y2U3IiwidXNlcl9pZCI6IjEifQ.otCRA4mNASe9_t2fJe_Sxt_diL0lXsGSoqD6ZZEF5Ww\"  # 或用 %env 先设\n",
     "URL = \"http://47.111.136.177/AppleStockChecker/purchasing-price-records/import-tradein-xlsx/?dry_run=0\"\n",
     "\n",
     "ROOT = \"localdata/\"\n",
@@ -425,12 +425,7 @@
      "output_type": "stream",
      "text": [
       "Found 1 excel files\n",
-      "Fetching: https://pastec.net/iphone\n",
-      "Found 119 records on https://pastec.net/iphone\n",
-      "Saved 119 rows -> localdata/shop11.csv\n",
-      "[1/1] localdata/shop11.csv\n",
-      "HTTP/1.1 202 Accepted\n",
-      "\n"
+      "Fetching: https://pastec.net/iphone\n"
      ]
     }
    ],
