--- a/数据恢复.ipynb
+++ b/数据恢复.ipynb
@@ -201,10 +201,8 @@
   },
   {
    "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
+     "end_time": "2025-10-24T09:06:12.581623Z",
      "start_time": "2025-10-24T08:45:41.109786Z"
     }
    },
@@ -430,11 +428,30 @@
       "Saved 119 rows -> localdata/shop11.csv\n",
       "[1/1] localdata/shop11.csv\n",
       "HTTP/1.1 202 Accepted\n",
-      "\n"
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[24], line 205\u001B[0m\n\u001B[1;32m    202\u001B[0m     time\u001B[38;5;241m.\u001B[39msleep(\u001B[38;5;241m20\u001B[39m)\n\u001B[1;32m    203\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mFinished \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mi\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m--> 205\u001B[0m \u001B[43mtime\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msleep\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m10\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m60\u001B[39;49m\u001B[43m)\u001B[49m\n",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
      ]
     }
    ],
-   "execution_count": null
+   "execution_count": 24
   },
   {
    "metadata": {},
