--- a/数据恢复.ipynb
+++ b/数据恢复.ipynb
@@ -202,12 +202,91 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-24T09:06:12.581623Z",
-     "start_time": "2025-10-24T08:45:41.109786Z"
+     "end_time": "2025-10-25T03:58:05.251232Z",
+     "start_time": "2025-10-25T03:42:16.171581Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "\n",
+    "\n",
+    "\n"
+   ],
+   "id": "ce1e3ac3d8a39c9d",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 1 excel files\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[28], line 205\u001B[0m\n\u001B[1;32m    202\u001B[0m     time\u001B[38;5;241m.\u001B[39msleep(\u001B[38;5;241m20\u001B[39m)\n\u001B[1;32m    203\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mFinished \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mi\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m--> 205\u001B[0m \u001B[43mtime\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msleep\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m10\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m60\u001B[39;49m\u001B[43m)\u001B[49m\n",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
+     ]
+    }
+   ],
+   "execution_count": 28
+  },
+  {
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
+    "ExecuteTime": {
+     "start_time": "2025-10-25T04:05:46.054010Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import requests\n",
+    "\n",
+    "def get_jwt_token(username, password, auth_url=\"https://yamaguti.ngrok.io/AppleStockChecker/auth/token/\"):\n",
+    "    payload = {\n",
+    "        \"username\": username,\n",
+    "        \"password\": password\n",
+    "    }\n",
+    "    try:\n",
+    "        response = requests.post(auth_url, json=payload)\n",
+    "        if response.status_code == 200:\n",
+    "            data = response.json()\n",
+    "            return {\n",
+    "                \"access_token\": data.get(\"access\"),\n",
+    "                \"refresh_token\": data.get(\"refresh\")\n",
+    "            }\n",
+    "        else:\n",
+    "            return f\"Error: {response.status_code}, {response.text}\"\n",
+    "    except requests.exceptions.RequestException as e:\n",
+    "        return f\"Error: {str(e)}\"\n",
+    "\n",
+    "# 示例\n",
+    "username = \"samuelzhu\"\n",
+    "password = \"Xdb73008762\"\n",
+    "# tokens = get_jwt_token(username, password)\n",
+    "# tokens.get(\"access_token\")\n",
+    "\n",
+    "\n",
     "#!/usr/bin/env python3\n",
     "# -*- coding: utf-8 -*-\n",
     "\"\"\"\n",
@@ -371,7 +450,7 @@
     "        print(f\"Saved {len(df)} rows -> {OUTPUT_CSV}\")\n",
     "\n",
     "\n",
-    "ACCESS = \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzYxMjk3MzE5LCJpYXQiOjE3NjEyOTU1MTksImp0aSI6Ijg2Njg2YWQ2ODg0MTRiMmRhNTYzNWVhNzM0MDFlYzFiIiwidXNlcl9pZCI6IjEifQ.w2wJ_yHGcIdQdJUHsfq_UJeACTbNo04FcB_Aj5N0fNw\"  # 或用 %env 先设\n",
+    "ACCESS = \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzYxMzY1NTI4LCJpYXQiOjE3NjEzNjM3MjgsImp0aSI6IjZiOWJhYTZjOTkzMjQ1YTRiNTg4NWEzMmU1Zjk3Njk1IiwidXNlcl9pZCI6IjEifQ.rLKWY-OhLtOGDkVv4twCmjvR_q18Gxw9hUhiQrnCy7k\"  # 或用 %env 先设\n",
     "URL = \"http://47.111.136.177/AppleStockChecker/purchasing-price-records/import-tradein-xlsx/?dry_run=0\"\n",
     "\n",
     "ROOT = \"localdata/\"\n",
@@ -407,16 +486,16 @@
     "    main()\n",
     "\n",
     "    for i, f in enumerate(files, 1):\n",
+    "        tokens = get_jwt_token(username, password)\n",
+    "        ACCESS = tokens.get(\"access_token\") # 或用 %env 先设\n",
     "        status, resp = post_one(f)\n",
     "        print(f\"[{i}/{len(files)}] {f}\\n{status}\\n\")\n",
     "        time.sleep(20)\n",
     "    print(f\"Finished {i}\")\n",
     "\n",
-    "    time.sleep(10*60)\n",
-    "\n",
-    "\n"
+    "    time.sleep(10*60)"
    ],
-   "id": "ce1e3ac3d8a39c9d",
+   "id": "c52930873b450ab9",
    "outputs": [
     {
      "name": "stdout",
@@ -428,30 +507,11 @@
       "Saved 119 rows -> localdata/shop11.csv\n",
       "[1/1] localdata/shop11.csv\n",
       "HTTP/1.1 202 Accepted\n",
-      "\n",
-      "Finished 1\n",
-      "Fetching: https://pastec.net/iphone\n",
-      "Found 119 records on https://pastec.net/iphone\n",
-      "Saved 119 rows -> localdata/shop11.csv\n",
-      "[1/1] localdata/shop11.csv\n",
-      "HTTP/1.1 202 Accepted\n",
-      "\n",
-      "Finished 1\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[24], line 205\u001B[0m\n\u001B[1;32m    202\u001B[0m     time\u001B[38;5;241m.\u001B[39msleep(\u001B[38;5;241m20\u001B[39m)\n\u001B[1;32m    203\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mFinished \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mi\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m--> 205\u001B[0m \u001B[43mtime\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msleep\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m10\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m60\u001B[39;49m\u001B[43m)\u001B[49m\n",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
+      "\n"
      ]
     }
    ],
-   "execution_count": 24
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -459,7 +519,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "c52930873b450ab9"
+   "id": "b941e71798d87c62"
   }
  ],
  "metadata": {
