--- a/Scraper11.ipynb
+++ b/Scraper11.ipynb
@@ -484,7 +484,6 @@
     "\n",
     "for i in range(1000):\n",
     "    main()\n",
-    "\n",
     "    for i, f in enumerate(files, 1):\n",
     "        tokens = get_jwt_token(username, password)\n",
     "        ACCESS = tokens.get(\"access_token\") # 或用 %env 先设\n",
@@ -507,7 +506,162 @@
       "Saved 119 rows -> localdata/shop11.csv\n",
       "[1/1] localdata/shop11.csv\n",
       "HTTP/1.1 202 Accepted\n",
-      "\n"
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n"
      ]
     }
    ],
