--- a/Scraper11.ipynb
+++ b/Scraper11.ipynb
@@ -201,66 +201,18 @@
   },
   {
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-10-25T03:58:05.251232Z",
-     "start_time": "2025-10-25T03:42:16.171581Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "\n",
-    "\n",
-    "\n"
-   ],
-   "id": "ce1e3ac3d8a39c9d",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 1 excel files\n",
-      "Fetching: https://pastec.net/iphone\n",
-      "Found 119 records on https://pastec.net/iphone\n",
-      "Saved 119 rows -> localdata/shop11.csv\n",
-      "[1/1] localdata/shop11.csv\n",
-      "HTTP/1.1 202 Accepted\n",
-      "\n",
-      "Finished 1\n",
-      "Fetching: https://pastec.net/iphone\n",
-      "Found 119 records on https://pastec.net/iphone\n",
-      "Saved 119 rows -> localdata/shop11.csv\n",
-      "[1/1] localdata/shop11.csv\n",
-      "HTTP/1.1 202 Accepted\n",
-      "\n",
-      "Finished 1\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[28], line 205\u001B[0m\n\u001B[1;32m    202\u001B[0m     time\u001B[38;5;241m.\u001B[39msleep(\u001B[38;5;241m20\u001B[39m)\n\u001B[1;32m    203\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mFinished \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mi\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m--> 205\u001B[0m \u001B[43mtime\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msleep\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m10\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m60\u001B[39;49m\u001B[43m)\u001B[49m\n",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
-     ]
-    }
-   ],
-   "execution_count": 28
-  },
-  {
-   "metadata": {
     "jupyter": {
      "is_executing": true
     },
     "ExecuteTime": {
-     "start_time": "2025-10-27T01:53:25.297222Z"
+     "start_time": "2025-11-04T06:27:54.018204Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import requests\n",
+    "from datetime import datetime\n",
+    "import pytz\n",
     "\n",
     "def get_jwt_token(username, password, auth_url=\"https://yamaguti.ngrok.io/AppleStockChecker/auth/token/\"):\n",
     "    payload = {\n",
@@ -506,174 +458,72 @@
       "Saved 119 rows -> localdata/shop11.csv\n",
       "[1/1] localdata/shop11.csv\n",
       "HTTP/1.1 202 Accepted\n",
-      "\n",
-      "Finished 1\n",
-      "Fetching: https://pastec.net/iphone\n",
-      "Found 119 records on https://pastec.net/iphone\n",
-      "Saved 119 rows -> localdata/shop11.csv\n",
-      "[1/1] localdata/shop11.csv\n",
-      "HTTP/1.1 202 Accepted\n",
-      "\n",
-      "Finished 1\n",
-      "Fetching: https://pastec.net/iphone\n",
-      "Found 119 records on https://pastec.net/iphone\n",
-      "Saved 119 rows -> localdata/shop11.csv\n",
-      "[1/1] localdata/shop11.csv\n",
-      "HTTP/1.1 202 Accepted\n",
-      "\n",
-      "Finished 1\n",
-      "Fetching: https://pastec.net/iphone\n",
-      "Found 119 records on https://pastec.net/iphone\n",
-      "Saved 119 rows -> localdata/shop11.csv\n",
-      "[1/1] localdata/shop11.csv\n",
-      "HTTP/1.1 202 Accepted\n",
-      "\n",
-      "Finished 1\n",
-      "Fetching: https://pastec.net/iphone\n",
-      "Found 119 records on https://pastec.net/iphone\n",
-      "Saved 119 rows -> localdata/shop11.csv\n",
-      "[1/1] localdata/shop11.csv\n",
-      "HTTP/1.1 202 Accepted\n",
-      "\n",
-      "Finished 1\n",
-      "Fetching: https://pastec.net/iphone\n",
-      "Found 119 records on https://pastec.net/iphone\n",
-      "Saved 119 rows -> localdata/shop11.csv\n",
-      "[1/1] localdata/shop11.csv\n",
-      "HTTP/1.1 202 Accepted\n",
-      "\n",
-      "Finished 1\n",
-      "Fetching: https://pastec.net/iphone\n",
-      "Found 119 records on https://pastec.net/iphone\n",
-      "Saved 119 rows -> localdata/shop11.csv\n",
-      "[1/1] localdata/shop11.csv\n",
-      "HTTP/1.1 202 Accepted\n",
-      "\n",
-      "Finished 1\n",
-      "Fetching: https://pastec.net/iphone\n",
-      "Found 119 records on https://pastec.net/iphone\n",
-      "Saved 119 rows -> localdata/shop11.csv\n",
-      "[1/1] localdata/shop11.csv\n",
-      "HTTP/1.1 202 Accepted\n",
-      "\n",
-      "Finished 1\n",
-      "Fetching: https://pastec.net/iphone\n",
-      "Found 119 records on https://pastec.net/iphone\n",
-      "Saved 119 rows -> localdata/shop11.csv\n",
-      "[1/1] localdata/shop11.csv\n",
-      "HTTP/1.1 202 Accepted\n",
-      "\n",
-      "Finished 1\n",
-      "Fetching: https://pastec.net/iphone\n",
-      "Found 119 records on https://pastec.net/iphone\n",
-      "Saved 119 rows -> localdata/shop11.csv\n",
-      "[1/1] localdata/shop11.csv\n",
-      "HTTP/1.1 202 Accepted\n",
-      "\n",
-      "Finished 1\n",
-      "Fetching: https://pastec.net/iphone\n",
-      "Found 119 records on https://pastec.net/iphone\n",
-      "Saved 119 rows -> localdata/shop11.csv\n",
-      "[1/1] localdata/shop11.csv\n",
-      "HTTP/1.1 202 Accepted\n",
-      "\n",
-      "Finished 1\n",
-      "Fetching: https://pastec.net/iphone\n",
-      "Found 119 records on https://pastec.net/iphone\n",
-      "Saved 119 rows -> localdata/shop11.csv\n",
-      "[1/1] localdata/shop11.csv\n",
-      "HTTP/1.1 202 Accepted\n",
-      "\n",
-      "Finished 1\n",
-      "Fetching: https://pastec.net/iphone\n",
-      "Found 119 records on https://pastec.net/iphone\n",
-      "Saved 119 rows -> localdata/shop11.csv\n",
-      "[1/1] localdata/shop11.csv\n",
-      "HTTP/1.1 202 Accepted\n",
-      "\n",
-      "Finished 1\n",
-      "Fetching: https://pastec.net/iphone\n",
-      "Found 119 records on https://pastec.net/iphone\n",
-      "Saved 119 rows -> localdata/shop11.csv\n",
-      "[1/1] localdata/shop11.csv\n",
-      "HTTP/1.1 202 Accepted\n",
-      "\n",
-      "Finished 1\n",
-      "Fetching: https://pastec.net/iphone\n",
-      "Found 119 records on https://pastec.net/iphone\n",
-      "Saved 119 rows -> localdata/shop11.csv\n",
-      "[1/1] localdata/shop11.csv\n",
-      "HTTP/1.1 202 Accepted\n",
-      "\n",
-      "Finished 1\n",
-      "Fetching: https://pastec.net/iphone\n",
-      "Found 119 records on https://pastec.net/iphone\n",
-      "Saved 119 rows -> localdata/shop11.csv\n",
-      "[1/1] localdata/shop11.csv\n",
-      "HTTP/1.1 202 Accepted\n",
-      "\n",
-      "Finished 1\n",
-      "Fetching: https://pastec.net/iphone\n",
-      "Found 119 records on https://pastec.net/iphone\n",
-      "Saved 119 rows -> localdata/shop11.csv\n",
-      "[1/1] localdata/shop11.csv\n",
-      "HTTP/1.1 202 Accepted\n",
-      "\n",
-      "Finished 1\n",
-      "Fetching: https://pastec.net/iphone\n",
-      "Found 119 records on https://pastec.net/iphone\n",
-      "Saved 119 rows -> localdata/shop11.csv\n",
-      "[1/1] localdata/shop11.csv\n",
-      "HTTP/1.1 202 Accepted\n",
-      "\n",
-      "Finished 1\n",
-      "Fetching: https://pastec.net/iphone\n",
-      "Found 119 records on https://pastec.net/iphone\n",
-      "Saved 119 rows -> localdata/shop11.csv\n",
-      "[1/1] localdata/shop11.csv\n",
-      "HTTP/1.1 202 Accepted\n",
-      "\n",
-      "Finished 1\n",
-      "Fetching: https://pastec.net/iphone\n",
-      "Found 119 records on https://pastec.net/iphone\n",
-      "Saved 119 rows -> localdata/shop11.csv\n",
-      "[1/1] localdata/shop11.csv\n",
-      "HTTP/1.1 202 Accepted\n",
-      "\n",
-      "Finished 1\n",
-      "Fetching: https://pastec.net/iphone\n",
-      "Found 119 records on https://pastec.net/iphone\n",
-      "Saved 119 rows -> localdata/shop11.csv\n",
-      "[1/1] localdata/shop11.csv\n",
-      "HTTP/1.1 202 Accepted\n",
-      "\n",
-      "Finished 1\n",
-      "Fetching: https://pastec.net/iphone\n",
-      "Found 119 records on https://pastec.net/iphone\n",
-      "Saved 119 rows -> localdata/shop11.csv\n",
-      "[1/1] localdata/shop11.csv\n",
-      "HTTP/1.1 202 Accepted\n",
-      "\n",
-      "Finished 1\n",
-      "Fetching: https://pastec.net/iphone\n",
-      "Found 119 records on https://pastec.net/iphone\n",
-      "Saved 119 rows -> localdata/shop11.csv\n",
-      "[1/1] localdata/shop11.csv\n",
-      "HTTP/1.1 202 Accepted\n",
-      "\n",
-      "Finished 1\n"
+      "\n"
      ]
     }
    ],
    "execution_count": null
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-04T06:10:37.228604Z",
+     "start_time": "2025-11-04T06:10:37.045819Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "b941e71798d87c62"
+   "source": [
+    "import pandas as pd\n",
+    "pd.DataFrame([[1,2]], columns=['a','b'])"
+   ],
+   "id": "b941e71798d87c62",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   a  b\n",
+       "0  1  2"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 1
   }
  ],
  "metadata": {
