--- a/Scraper11.ipynb
+++ b/Scraper11.ipynb
@@ -205,7 +205,7 @@
      "is_executing": true
     },
     "ExecuteTime": {
-     "start_time": "2025-11-04T06:27:54.018204Z"
+     "start_time": "2025-11-07T03:27:26.792794Z"
     }
    },
    "cell_type": "code",
@@ -403,7 +403,7 @@
     "\n",
     "\n",
     "ACCESS = \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzYxMzY1NTI4LCJpYXQiOjE3NjEzNjM3MjgsImp0aSI6IjZiOWJhYTZjOTkzMjQ1YTRiNTg4NWEzMmU1Zjk3Njk1IiwidXNlcl9pZCI6IjEifQ.rLKWY-OhLtOGDkVv4twCmjvR_q18Gxw9hUhiQrnCy7k\"  # 或用 %env 先设\n",
-    "URL = \"http://47.111.136.177/AppleStockChecker/purchasing-price-records/import-tradein-xlsx/?dry_run=0\"\n",
+    "URL = \"http://yamaguti.ngrok.io/AppleStockChecker/purchasing-price-records/import-tradein-xlsx/?dry_run=0\"\n",
     "\n",
     "ROOT = \"localdata/\"\n",
     "# 递归找 excel\n",
