--- a/Scraper11.ipynb
+++ b/Scraper11.ipynb
@@ -201,11 +201,9 @@
   },
   {
    "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
-     "start_time": "2025-11-11T01:17:30.079821Z"
+     "end_time": "2025-11-17T07:40:57.219384Z",
+     "start_time": "2025-11-17T06:12:57.290311Z"
     }
    },
    "cell_type": "code",
@@ -458,11 +456,75 @@
       "Saved 119 rows -> localdata/shop11.csv\n",
       "[1/1] localdata/shop11.csv\n",
       "HTTP/1.1 202 Accepted\n",
-      "\n"
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n",
+      "[1/1] localdata/shop11.csv\n",
+      "HTTP/1.1 202 Accepted\n",
+      "\n",
+      "Finished 1\n",
+      "Fetching: https://pastec.net/iphone\n",
+      "Found 119 records on https://pastec.net/iphone\n",
+      "Saved 119 rows -> localdata/shop11.csv\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'get'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 229\u001B[0m\n\u001B[1;32m    227\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i, f \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28menumerate\u001B[39m(files, \u001B[38;5;241m1\u001B[39m):\n\u001B[1;32m    228\u001B[0m     tokens \u001B[38;5;241m=\u001B[39m get_jwt_token(username, password)\n\u001B[0;32m--> 229\u001B[0m     ACCESS \u001B[38;5;241m=\u001B[39m \u001B[43mtokens\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mget\u001B[49m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124maccess_token\u001B[39m\u001B[38;5;124m\"\u001B[39m) \u001B[38;5;66;03m# 或用 %env 先设\u001B[39;00m\n\u001B[1;32m    230\u001B[0m     status, resp \u001B[38;5;241m=\u001B[39m post_one(f)\n\u001B[1;32m    231\u001B[0m     \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m[\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mi\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m/\u001B[39m\u001B[38;5;132;01m{\u001B[39;00m\u001B[38;5;28mlen\u001B[39m(files)\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m] \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mf\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;132;01m{\u001B[39;00mstatus\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n",
+      "\u001B[0;31mAttributeError\u001B[0m: 'str' object has no attribute 'get'"
      ]
     }
    ],
-   "execution_count": null
+   "execution_count": 1
   },
   {
    "metadata": {
